--- a/sdk/api/galtea.mdx
+++ b/sdk/api/galtea.mdx
@@ -32,7 +32,7 @@ The `Galtea` class provides access to the following services:
 - [`inference_results`](/sdk/api/inference-result/service): Access [inference result](/concepts/product/version/session/inference-result) related functionalities.
 - [`evaluations`](/sdk/api/evaluation/service): Access [evaluation](/concepts/product/version/session/evaluation) related functionalities.
 - [`evaluation_tasks`](/sdk/api/evaluation-task/service): Access [evaluation task](/concepts/product/version/session/evaluation/task) related functionalities.
-- [`conversation_simulator`](/sdk/api/conversation-simulator/service): Access [conversation simulator](/concepts/conversation-simulator) related functionalities.
+- [`simulator`](/sdk/api/simulator/service): Access [conversation simulator](/concepts/conversation-simulator) related functionalities.
 
 
 ### Example
