Use of EvaluationMetric eveywhere

--- a/sdk/integrations/github-actions.mdx
+++ b/sdk/integrations/github-actions.mdx
@@ -77,6 +77,7 @@ Create a `evaluate.py` file in your repository with the following content:
 ```python evaluate.py
 from galtea import Galtea
 from dotenv import load_dotenv
+from galtea.application.services.evaluation_task_service import EvaluationMetric
 import os
 
 load_dotenv()
@@ -96,9 +97,9 @@ version = galtea.versions.create(
 test = galtea.tests.get_by_name(product_id=PRODUCT_ID, test_name=TEST_NAME)
 test_cases = galtea.test_cases.list(test.id)
 
-metric_names = [
-    GALTEA_ACCURACY_METRIC_NAME,
-    GALTEA_COMPLETENESS_METRIC_NAME
+metrics = [
+  EvaluationMetric(name=GALTEA_ACCURACY_METRIC_NAME),
+  EvaluationMetric(name=GALTEA_COMPLETENESS_METRIC_NAME)
 ]
 
 # Placeholder for where the model's answer would be generated
@@ -109,7 +110,7 @@ for test_case in test_cases:
     galtea.evaluation_tasks.create_single_turn(
       version_id=version.id,
       test_case_id=test_case.id,
-      metrics=metric_names,
+      metrics=metrics,
       actual_output=model_answer
     )
 ```
