--- a/sdk/tutorials/monitor-production-responses-to-user-queries.mdx
+++ b/sdk/tutorials/monitor-production-responses-to-user-queries.mdx
@@ -12,6 +12,7 @@ For simple, single-turn interactions, you can send the details to Galtea using `
 
 ```python
 from galtea import Galtea
+from galtea.application.services.evaluation_task_service import EvaluationMetric
 import os
 
 galtea = Galtea(api_key=os.getenv("GALTEA_API_KEY"))
@@ -26,7 +27,7 @@ def handle_user_query(user_query, retrieval_context=None):
     galtea.evaluation_tasks.create_single_turn(
       version_id=VERSION_ID,
       is_production=True,
-      metrics=["coherence", "answer-relevancy", "faithfulness"],
+      metrics=[EvaluationMetric(name="coherence"), EvaluationMetric(name="answer-relevancy"), EvaluationMetric(name="faithfulness")],
       input=user_query,
       actual_output=model_response,
       retrieval_context=retrieval_context
@@ -45,11 +46,15 @@ First, create a session at the start of the conversation. For production monitor
 
 ```python
 from galtea import Galtea
+from galtea.application.services.evaluation_task_service import EvaluationMetric
 import os
 
 galtea = Galtea(api_key=os.getenv("GALTEA_API_KEY"))
 VERSION_ID = "YOUR_ACTIVE_VERSION_ID"
-METRICS_TO_EVALUATE = ["conversation-relevancy", "knowledge-retention"]
+METRICS_TO_EVALUATE = [
+    EvaluationMetric(name="conversation-relevancy"),
+    EvaluationMetric(name="knowledge-retention")
+]
 
 # Use is_production=True for real user interactions
 session = galtea.sessions.create(
