--- a/sdk/tutorials/create-evaluation.mdx
+++ b/sdk/tutorials/create-evaluation.mdx
@@ -30,6 +30,7 @@ This example demonstrates how to run an evaluation on all test cases from a spec
 
 ```python
 from galtea import Galtea
+from galtea.application.services.evaluation_task_service import EvaluationMetric
 import os
 
 # Initialize Galtea SDK
@@ -39,7 +40,10 @@ galtea = Galtea(api_key=os.getenv("GALTEA_API_KEY"))
 # Replace with your actual IDs
 YOUR_VERSION_ID = "your_version_id"
 YOUR_TEST_ID = "your_test_id"
-METRICS_TO_EVALUATE = ["Factual Accuracy", "coherence"] 
+METRICS_TO_EVALUATE = [
+    EvaluationMetric(name="Factual Accuracy"),
+    EvaluationMetric(name="coherence"),
+]
 
 # --- Your Product's Logic (Placeholder) ---
 # In a real scenario, this would call your actual AI model or API
