--- a/concepts/product.mdx
+++ b/concepts/product.mdx
@@ -57,18 +57,21 @@ The SDK allows you to list existing products, retrieve specific products by thei
 </ResponseField>
 
 <ResponseField name="Capabilities" type="Text" required>
-  List what your product is specifically designed to do well. This helps generate targeted quality tests.
-    <strong>Example:</strong> "Can answer questions about phone specifications, recommend devices based on user preferences, compare prices across models, and provide information about warranties and accessories."
+  List what your product is specifically designed to do, and what kind of information has access to. This helps generate specifically targeted test cases.
+
+    <strong>Example:</strong> "Can answer questions about phone specifications, recommend devices based on user preferences, can access past user purchases, compare prices across models, and provide information about warranties and accessories."
 </ResponseField>
 
 <ResponseField name="Inabilities" type="Text" required>
-  List technical limitations and scope boundaries. This prevents irrelevant or misleading tests.
+  List technical limitations such as information and tools that the product do not have access to, and additionally the general scope boundaries. This prevents generation of irrelevant or misleading test cases.
+
     <strong>Example:</strong> "Cannot process purchases, access customer account information, or provide technical support for device repairs."
 </ResponseField>
 
 <ResponseField name="Security Boundaries" type="Text" required>
-  Outline access restrictions and behavioral constraints. This is crucial for effective security testing.
-    <strong>Example:</strong> "Must not access customer payment data, personal contact information, or internal inventory systems. Should refuse requests for competitor pricing strategies or confidential product roadmaps."
+  Things that the product must not do, although theoretically it has the capability to do so.
+
+    <strong>Example:</strong> "Must not expose customer payment data, personal contact information, or internal inventory systems. Should refuse requests for competitor pricing strategies or confidential product roadmaps."
 </ResponseField>
 
 <ResponseField name="RAG" type="Boolean" required>
