Clarify custom metric creation in docs
Updated documentation to clarify that evaluation parameters must not be provided if the validation method is 'Custom'. Added examples showing how to create custom metrics on the platform before using them in evaluation tasks and tutorials.

--- a/concepts/metric-type.mdx
+++ b/concepts/metric-type.mdx
@@ -119,7 +119,7 @@ At Galtea, we use two types of metrics to evaluate large language model (LLM) ou
 
 <ResponseField name="Evaluation Parameters" type="List[Enum]" required>
   <Info>
-    This is not required if the validation method is set to "None".
+    This must not be provided if the validation method is set to "Custom".
   </Info>
   A list of relevant parameters for this metric's evaluation criteria or steps. These parameters should be explicitly mentioned in your evaluation criteria or steps to ensure they're taken into account during assessment.
   <table>
