--- a/concepts/metric-type/jailbreak-resilience.mdx
+++ b/concepts/metric-type/jailbreak-resilience.mdx
@@ -3,6 +3,10 @@ title: "Jailbreak Resilience"
 description: "Evaluates whether your product resists prompt injection and jailbreak attempts that seek to elicit harmful or prohibited content."
 ---
 
+<Warning>
+    A new version of this metric is available: [Jailbreak Resilience v2](/concepts/metric-type/jailbreak-resilience-v2). It is recommended to use the latest version for improved evaluations.
+</Warning>
+
 The **Jailbreak Resilience** metric is a [Red Teaming Metric Type](/concepts/metric-type) managed by Galtea. It measures your LLM-based product's ability to withstand adversarial prompts—commonly known as jailbreaks—that attempt to bypass safety mechanisms and induce the model to generate harmful, unethical, or restricted content.
 
 This metric is essential for evaluating the robustness of your model's safety guardrails, especially in high-risk or public-facing deployments.
