--- a/sdk/api/evaluation-task/create-single-turn.mdx
+++ b/sdk/api/evaluation-task/create-single-turn.mdx
@@ -14,7 +14,7 @@ This method is versatile and can be used for two main scenarios:
 
 ### Example: Test-Based Evaluation with Standard and Custom Metrics
 ```python
-from galtea import Galtea, CustomScoreEvaluationMetric, EvaluationMetric
+from galtea import Galtea, CustomScoreEvaluationMetric
 
 # Define your custom metric
 class MyAccuracy(CustomScoreEvaluationMetric):
@@ -34,22 +34,20 @@ evaluation_tasks = galtea.evaluation_tasks.create_single_turn(
     test_case_id="YOUR_TEST_CASE_ID",
     actual_output="The capital of France is Paris.",
     metrics=[
-        EvaluationMetric(name="coherence"), # Standard metric
-        custom_score_accuracy               # Your custom metric object
+        "coherence",            # Standard metric
+        custom_score_accuracy   # Your custom metric object
     ]
 )
 ```
 
 ### Example: Production Monitoring
 ```python
-from galtea import EvaluationMetric
-
 evaluation_tasks = galtea.evaluation_tasks.create_single_turn(
     version_id="YOUR_VERSION_ID",
     is_production=True,
     input="A real user's query from production",
     actual_output="The model's live response.",
-    metrics=[EvaluationMetric(name="relevance"), EvaluationMetric(name="non-toxic")],
+    metrics=["relevance", "non-toxic"],
     retrieval_context="Context retrieved by RAG for this query."
 )
 ```
@@ -58,9 +56,9 @@ evaluation_tasks = galtea.evaluation_tasks.create_single_turn(
 <ResponseField name="version_id" type="string" required>
   The ID of the version you want to evaluate.
 </ResponseField>
-<ResponseField name="metrics" type="List[EvaluationMetric | CustomScoreEvaluationMetric]" required>
+<ResponseField name="metrics" type="List[string | CustomScoreEvaluationMetric]" required>
   A list of metrics to use for evaluation. You can provide:
-  - Standard metrics as `EvaluationMetric` objects.
+  - Standard metrics as strings (e.g., "coherence").
   - Custom, locally-scored metrics as objects inheriting from `CustomScoreEvaluationMetric`.
 </ResponseField>
 <ResponseField name="actual_output" type="string" required>
