--- a/sdk/usage.mdx
+++ b/sdk/usage.mdx
@@ -118,8 +118,8 @@ for test_case in test_cases:
         version_id=version.id,
         test_case_id=test_case.id,
         metrics=[
-            EvaluationMetric(name=metric_type_from_api.name),   # Standard metric by name
-            keyword_metric                                      # Custom metric object
+            metric_type_from_api.name,   # Standard metric by name
+            keyword_metric               # Custom metric object
         ],
         actual_output=actual_output,
         retrieval_context=retrieval_context, 
